[gd_scene load_steps=2 format=3 uid="uid://jbn1l2apucf4"]

[ext_resource type="Script" path="res://scenes/characters/enemy.gd" id="1_qlccf"]

[node name="Enemy" type="Area2D" groups=["enemies"]]
script = ExtResource("1_qlccf")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

[node name="SlideTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="SlideTimer" to="." method="_on_slide_timer_timeout"]
